--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.daily.DailyFragment"
-    android:paddingTop="36dp">
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,7 +13,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp">
 
 
             <LinearLayout
@@ -22,20 +23,11 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="20dp">
 
-                <RelativeLayout
+                <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:background="@drawable/cross_circle"
-                    android:backgroundTint="#F0F3F6"
-                    android:padding="7dp"
-                    android:paddingHorizontal="20dp">
+                    android:src="@drawable/arrow_right" />
 
-                    <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="18dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_baseline_arrow_back_24" />
-                </RelativeLayout>
 
                 <TextView
                     android:layout_width="0dp"
@@ -47,18 +39,12 @@
                     android:textColor="@color/black"
                     android:textSize="14sp" />
 
-                <RelativeLayout
+                <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:background="@drawable/cross_circle"
-                    android:backgroundTint="#F0F3F6">
+                    android:src="@drawable/arrow_right_icon" />
 
-                    <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="18dp"
-                        android:layout_centerInParent="true"
-                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
-                </RelativeLayout>
+
             </LinearLayout>
 
             <com.github.mikephil.charting.charts.BarChart
@@ -66,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="232dp"
                 android:layout_below="@+id/top_section"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="42dp" />
 
             <RelativeLayout
@@ -83,7 +70,7 @@
 
                     <ImageView
                         android:layout_width="16dp"
-                        android:layout_height="16dp"
+                        android:layout_height="match_parent"
                         android:src="@drawable/rounded_corner_4_workout" />
 
                     <TextView
@@ -139,9 +126,8 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="7dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:src="@drawable/fire_icon" />
 
                     <TextView
@@ -172,10 +158,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_marginStart="7dp"
-                        android:src="@drawable/time_icon" />
+                        android:src="@drawable/daily_activity_clock" />
 
                     <TextView
                         android:layout_width="wrap_content"
