--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,40 +12,35 @@
         android:id="@+id/your_health_sight_section"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63.5dp"
-        android:layout_marginStart="22.4dp">
+        android:layout_marginStart="22.4dp"
+        android:layout_marginTop="63.5dp">
+
         <ImageView
             android:id="@+id/health_insight_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/health_insight_icon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_centerVertical="true"
-            />
+            android:src="@drawable/icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="11.6dp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/health_insight_icon"
             android:fontFamily="@font/inter_bold"
             android:text="Your Health Insight"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/close_btn"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@drawable/cross_circle"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="16dp">
-            <ImageView
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:src="@drawable/ic_baseline_close_24"
-                android:layout_centerInParent="true"
-                />
-        </RelativeLayout>
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/close_icon" />
     </RelativeLayout>
 
     <LinearLayout
@@ -57,18 +52,13 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="35dp">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/setps_icon"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:background="@drawable/rounded_corner_12"
-            android:padding="10dp">
+            android:src="@drawable/steps_icon"/>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/foot_steps" />
-        </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/calorie_btn"
@@ -83,21 +73,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true">
+
                 <ImageView
                     android:id="@+id/fire_icon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/fire_icon"
-                    android:layout_centerVertical="true"/>
+                    android:scaleType="centerCrop"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="7dp"
                     android:layout_toEndOf="@id/fire_icon"
                     android:fontFamily="@font/inter_semibold"
                     android:text="Calorie"
+                    android:layout_marginStart="4dp"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
 
@@ -105,33 +98,21 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/sleep_icon"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_marginStart="16dp"
-            android:background="@drawable/rounded_corner_12"
-            >
+            android:src="@drawable/sleep_icon">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/moon_star_icon" />
-        </RelativeLayout>
+        </ImageView>
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/diet_icon"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_marginStart="16dp"
-            android:background="@drawable/rounded_corner_12"
-            android:padding="13dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/forks_icon" />
-        </RelativeLayout>
+            android:src="@drawable/diet_icon"/>
     </LinearLayout>
 
 
@@ -160,14 +141,11 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@drawable/rounded_corner_12"
             app:tabIndicator="@drawable/rounded_corner_8_white"
             app:tabIndicatorColor="@color/white"
-            app:tabIndicatorHeight="42dp"
-            app:tabPadding="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            app:tabIndicatorHeight="40dp"
             app:tabSelectedTextColor="@color/nav_color"
             app:tabTextAppearance="@style/VisitTabText"
             app:tabTextColor="@color/white"
