--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="VisitTabText" parent="TextAppearance.Design.Tab">
@@ -20,4 +23,6 @@
         <item name="fontFamily">@font/inter_semibold</item>
         <item name="textAllCaps">false</item>
     </style>
+
+
 </resources>
